2020-10-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Rename gtksheet_signal_emit with an undescore;
      gtk_sheet_signal_emit.

2020-10-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Clean code; update code style, fix indentations.
      Convert plain text to Doxygen documenation. Remove conditional definition
      of _gtk_sheet_draw_pixmap and eliminate unused GdkGC second argument.

2020-10-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Remove old debug code. Revise gtk_sheet_flash
      and gtk_sheet_extend_selection to utilize gdk_draw_pixmap instead of
      gdk_draw_pixmap and eliminate GdkGC. Remove ancillary GdkGC pointer
      bg_gc in _cell_draw_background.

2020-09-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_menus.c: Replace gtk_toolbar_set_style with geda_toolbar_set_style.

    * src/x_toolbars.c: Replace gtk_toolbar_set_style with geda_toolbar_set_style.

2020-09-15 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_toolbars.c: Utilize geda_toolbar_append_space in x_toolbars_init.

2020-08-31 Wiley E. Hill <wileyhill@gmail.com>

    * data/Makefile.am: Redirect error output from update-mime-database
      to null to suppress pesky "not in the search path" message.

2020-07-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_dialog.c: Explicitly declare functions without arguments void.

    * src/x_window.c: Update/revise documentation content and formatting.

2020-04-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/Makefile.am: Add "copy-dt-needed-entries" flag to LDFLAGS
      to resolve bizzar linker error where the linker fails to resolve the
      symbol "cairo_destroy" in a shared object, X11.so, when linking the
      dynamic convenience library to the static application binary. This
      was observed on Ubuntu 14.0x x64 platforms.

2020-03-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib.c: Call g_main_loop_quit before exiting gattrib_quit