@@ -1,7 +1,8 @@
 2020-10-21 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/gtksheet/gtksheet.c: Rename gtksheet_signal_emit with an undescore;
-      gtk_sheet_signal_emit.
+      gtk_sheet_signal_emit and rename gtk_sheet_hide_active_cell without a
+      leading underscore.
 
 2020-10-20 Wiley E. Hill <wileyhill@gmail.com>
 
